# ai-execution-boundary-core

./: .gitignore  .private_key.pem  API_STABILITY.md  CHANGELOG.md  INSTALL.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  PRODUCT_IDENTITY.md  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
demo/: human_authz.json  llm_output.json  policy.yaml  run_demo.py  test_langchain.py  test_policy.py  test_readme.py
docs/: otel-discussion-draft.md  otel-proposal.md
examples/: campaign_example.py  finance_example.py
src/agent_execution_guard/: __init__.py  langchain_adapter.py
src/execution_boundary/: __init__.py  crypto.py  enforce.py  engine.py  interface.py  ledger.py  models.py  policy_guard.py  risk.py  severity_gate.py
tests/: test_crypto.py  test_enforce.py  test_engine.py  test_integration.py  test_interface_contract.py  test_langchain_adapter.py  test_ledger.py  test_risk_scoring.py
